inner page html

--- a/ui/src/scss/main.scss
+++ b/ui/src/scss/main.scss
@@ -13,3 +13,6 @@
 @import "~bootstrap/scss/pagination";
 @import "~bootstrap/scss/utilities";
 @import "custom";
+@import 'login';
+@import 'list';
+@import 'issue-inner';
