--- a/ui/src/scss/list.scss
+++ b/ui/src/scss/list.scss
@@ -1,5 +1,3 @@
-@import 'main';
-
 .list-bg {
   background: $login-bg-color url('../assets/img/list.bg.png');
   background-size: cover;
@@ -28,6 +26,10 @@
 
 .h-100-minus-navbar {
   height: calc(100% - #{$navbar-height});
+}
+
+.min-h-100-minus-navbar {
+  min-height: calc(100% - #{$navbar-height});
 }
 
 .absolute-vertical-center {
@@ -84,17 +86,17 @@
         font-size: 12px;
 
         &.badge-warning {
-          box-shadow: 0 1px 2px $badge-warning-shadow-color;
+          box-shadow: 0 1px 0 $badge-warning-shadow-color;
         }
 
         &.badge-danger {
           background-color: #e10c02;
-          box-shadow: 0 1px 2px #b40a02;
+          box-shadow: 0 1px 0 #b40a02;
         }
 
         &.badge-secondary {
           background-color: #444444;
-          box-shadow: 0 1px 2px #363636;
+          box-shadow: 0 1px 0 #363636;
         }
       }
 
