auth with github, then with local api

--- a/ui/src/scss/custom.scss
+++ b/ui/src/scss/custom.scss
@@ -4,6 +4,10 @@ body {
   color: $text-color;
 }
 
+#app-root {
+  width: 100%;
+}
+
 .btn {
   // TODO: bootstrap vars dont work on this one
   &:hover, &:active, &:focus {
