--- a/ui/src/scss/custom.scss
+++ b/ui/src/scss/custom.scss
@@ -6,6 +6,7 @@ body {
 
 #app-root {
   width: 100%;
+  height: 100%;
 }
 
 .btn {
@@ -30,14 +31,33 @@ body {
 .btn-logout {
   background: url('../assets/img/logout.ico.png') no-repeat left center;
   padding-left: 27px;
-  color: #2f3153;
+  color: $btn-logout-color;
 
   &:hover {
-    color: #99cc33;
+    color: $list-filter-hover-color;
     text-decoration: none;
   }
 }
 
 .light-gray {
   color: $light-gray;
+}
+
+.cards {
+  padding: 0 5px;
+  margin-bottom: 35px;
+
+  .card {
+    margin-bottom: 20px;
+    box-shadow: 0 1px 1px $card-shadow-color;
+    background-color: $white;
+
+    .card-body {
+      font-size: 15px;
+
+      a:hover {
+        text-decoration: underline;
+      }
+    }
+  }
 }
