--- a/ui/src/scss/issue-inner.scss
+++ b/ui/src/scss/issue-inner.scss
@@ -5,7 +5,7 @@
 
   .back {
     font-size: 13px;
-    color: rgb(133, 179, 43);
+    color: $issue-back-color;
     background: url('../assets/img/back.ico.png') no-repeat left 2px;
     padding-left: 20px;
     margin-bottom: 30px;
@@ -17,42 +17,14 @@
   }
 
   .cards {
-    padding: 0 5px;
-    margin-bottom: 45px;
-
     .card {
-      margin-bottom: 20px;
-      box-shadow: 0 1px 1px $card-shadow-color;
-
-      background-color: $white;
-
-      .badge {
-        padding: 6px 5px 3px;
-        font-size: 12px;
-
-        &.badge-warning {
-          box-shadow: 0 1px 2px $badge-warning-shadow-color;
-        }
-
-        &.badge-danger {
-          background-color: #e10c02;
-          box-shadow: 0 1px 2px #b40a02;
-        }
-
-        &.badge-secondary {
-          background-color: #444444;
-          box-shadow: 0 1px 2px #363636;
-        }
-      }
-
       .card-body {
         padding: 30px 40px;
-        font-size: 15px;
 
         .issue {
           font-size: 30px;
           letter-spacing: 1px;
-          color: rgb(51, 51, 51);
+          color: $issue-color;
           font-weight: 300;
         }
       }
@@ -61,23 +33,28 @@
         color: $gray;
         font-size: 13px;
 
-        .badge-open {
-          color: $white;
+        .badge-open, .badge-closed {
           font-size: 14px;
           font-weight: 300;
-          background: $btn-primary-bg-color url('../assets/img/issue.open.ico.png') no-repeat 8px center;
           padding: 8px 10px 7px 29px;
           margin-right: 20px;
-          box-shadow: 0 1px 0 #7faa29;
           text-transform: uppercase;
+        }
+
+        .badge-open {
+          color: $white;
+          background: $btn-primary-bg-color url('../assets/img/issue.open.ico.png') no-repeat 8px center;
+          box-shadow: 0 1px 0 $badge-open-color;
+        }
+
+        .badge-closed {
+          color: $login-bg-color;
+          background: $scrollbar-color url('../assets/img/closed.ico.png') no-repeat 8px center;
+          box-shadow: 0 1px 0 $secondary-badge-color;
         }
 
         .author {
           color: $author-color;
-
-          &:hover {
-            text-decoration: underline;
-          }
         }
       }
     }
@@ -119,7 +96,7 @@
         height: 141%;
         transform-origin: inherit;
         transform: rotate(45deg);
-        background: #fff;
+        background: $white;
       }
 
       .author-thumb {
@@ -134,7 +111,7 @@
     .comment {
       font-size: 13px;
       line-height: 20px;
-      color: rgb(102, 102, 102);
+      color: $comment-color;
     }
   }
 }
