--- a/ui/src/scss/login.scss
+++ b/ui/src/scss/login.scss
@@ -7,5 +7,9 @@ body {
     background: $login-bg-color url('../assets/img/login.bg.png');
     background-size: cover;
     resize: both;
+
+    #app-root {
+      height: auto;
+    }
   }
 }
