--- a/ui/src/scss/variables.scss
+++ b/ui/src/scss/variables.scss
@@ -1,11 +1,12 @@
 
 // Colors
 $white: #fff;
+$light-green: #9fd533;
 $login-bg-color: #0b0f27;
 $main-bg-color: #f5f5f5;
 $list-border-color: #e6e6e6;
 $btn-primary-hover-color: #86b300;
-$btn-primary-bg-color: #9fd533;
+$btn-primary-bg-color: $light-green;
 $list-filter-hover-color: #99cc33;
 $author-color: #85b32b;
 $issue-back-color: rgb(133, 179, 43);
